--- a/client/src/assets/CSS/index.css
+++ b/client/src/assets/CSS/index.css
@@ -104,3 +104,47 @@
 .active-link {
     text-decoration: #0d6efd;
 }
+
+
+/* AddNewCategoryPage.css */
+
+.form-container {
+    width: 900px;
+    margin: 0 auto;
+    padding: 30px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+}
+
+.form-label {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.input-field {
+    flex: 1;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 4px;
+    border: 1px solid #d9d9d9;
+    margin-right: 10px;
+}
+
+.submit-button {
+    width: 150px; /* Adjust width as needed */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 4px;
+}
+.form-row {
+    display: flex;
+    align-items: center;
+}
+
+
