--- a/client/src/assets/CSS/index.css
+++ b/client/src/assets/CSS/index.css
@@ -165,7 +165,7 @@
     }
 }
 .product-form-container {
-    max-width: 900px;
+    max-width: 98%;
     margin: 0 auto;
     padding: 20px;
     background: #fff;
